# analysis

./: README.md  alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 084089f49ee1_modified_model_cofe_2_0.py  20a1e8e6b1b1_modified_model_cofe_not_nan.py  4724ebc32f94_modified_model_cofe.py  573ad6d20b62_create_model_cofe.py  7aa7db4fde2d_modified_model_cofe_field_id.py  85f160193f76_modified_model_cofe_3_0.py
src/: main_fast.py
src/core/: settings.py
src/db/: mysql.py
src/handlers/: coffee.py  coffee_network.py  coffee_taste.py  coffee_view.py  coffee_volume.py
src/models/: coffee.py
src/services/: coffee.py  doc.py  network.py
