[project]
name = "analysis"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "sqlalchemy (>=2.0.45,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "fastapi (>=0.124.4,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "asyncmy (>=0.2.10,<0.3.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "pymysql (>=1.1.2,<2.0.0)",
    "orjson (>=3.11.5,<4.0.0)",
    "streamlit (>=1.52.1,<2.0.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "black (>=25.12.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
