[tool.poetry]
name = "analysis"
version = "0.1.0"
description = "Coffee sales analysis"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = ">=2.0.45"
pydantic = ">=2.12.5"
pydantic-settings = ">=2.12.0"
alembic = ">=1.17.2"
fastapi = ">=0.124.4"
uvicorn = ">=0.38.0"
pandas = ">=2.3.3"
asyncmy = ">=0.2.10"
openpyxl = ">=3.1.5"
pymysql = ">=1.1.2"
orjson = ">=3.11.5"
streamlit = ">=1.52.1"
plotly = ">=6.5.0"
isort = ">=7.0.0"
black = ">=25.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
